[tool.poetry]

name = "plenty_api"
version = "0.2.7"
description = "Interface for the PlentyMarkets API."

license = "GPLv3"

authors = ["Sebastian Fricke <sebastian.fricke.linux@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/plenty_api"
repository = "https://github.com/initBasti/python_plentymarkets_api"

keywords = [
    'plentymarkets', 'python', 'api', 'plenty', 'data'
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]

python = "^3.7"
keyring = "^21.4.0"
simplejson = "^3.17.2"
pandas = "^1.1.2"
requests = "^2.24.0"
python-gnupg = "^0.4.6"

[tool.poetry.dev-dependencies]

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "~2.6.0"

# Testing
pytest = "^5.3.2"
pytest-cov = "*"
pytest-describe = { git = "https://github.com/pytest-dev/pytest-describe", rev = "453aa9045b265e313f356f1492d8991c02a6aea6" } # use 2.0 when released
pytest-expecter = "^2.1"
pytest-random = "*"

# Tooling
pyinstaller = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
